# raytracing

./: Cargo.toml  run.sh
assets/: scene.txt  scene_no_cube.txt
src/: bvh.rs  camera.rs  image.rs  light.rs  main.rs  objects.rs  parser.rs  random.rs  ray.rs  trace.rs
src/objects/: figures.rs  geometry.rs  mod.rs  object.rs  sample.rs
