[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glm = { version = "0.18.0", package = "nalgebra-glm" }
na = { package = "nalgebra", version = "0.32.1" }
itertools="0.11.0"
rand="0.8.5"
noisy_float = "0.2.0"
simple_parallel = "0.2"
num_cpus = "1.0"

[profile.release]
opt-level = 1
debug = 1
